package com.design.model.proxy.general;

/**
 * Description: TODO
 *
 * @author : zhaoyan.ye (zhaoyan.ye@ucarinc.com)
 * @since : 2019-07-25 16:48:30
 **/
public interface IPay {

    /**
     * 缴费
     */
    void pay();
}
